Modifications to fix the last check-in

--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Jan 05 09:57:12 PST 2017
-sdk.dir=I\:\\Projects\\Android\\sdk
+sdk.dir=D\:\\Projects\\Android\\sdk
